#
# Copyright (c) 2001,02 Bernd Walter Computer Technology
# All rights reserved.
#
# $URL$
# $Date$
# $Author$
# $Rev$
#

lib_LIBRARIES =		libbwct.a
libbwct_a_SOURCES =	bwct/bwct.h \
			bwct/config.h \
			bwct/thread.h \
			bwct/thread.xx \
			bwct/tool.h \
			bwct/tool.cc \
			bwct/fdhelper.h \
			bwct/fdhelper.cc \
			bwct/tape.h \
			bwct/tape.cc \
			bwct/changer.cc \
			bwct/bsd.cc \
			bwct/bsd.h \
			bwct/changer.h \
			bwct/ssl.h \
			bwct/ssl.cc \
			bwct/xdr.h \
			bwct/xdr.cc \
			bwct/network.h \
			bwct/network.cc \
			bwct/compress.h \
			bwct/compress.cc \
			bwct/database.h \
			bwct/database.cc



