#
# Copyright (c) 2001,02,03 Bernd Walter Computer Technology
# All rights reserved.
#
# $URL$
# $Date$
# $Author$
# $Rev$
#

includedir = $(DESTDIR)$(prefix)/include/bwct
dist_data_DATA =	INSTALL
lib_LIBRARIES =		libbwct.a
include_HEADERS =	bwct/base.h \
			bwct/bwct.h \
			bwct/config.h \
			bwct/thread.h \
			bwct/tool.h \
			bwct/fdhelper.h \
			bwct/tape.h \
			bwct/bsd.h \
			bwct/changer.h \
			bwct/ssl.h \
			bwct/xdr.h \
			bwct/network.h \
			bwct/compress.h \
			bwct/database.h
libbwct_a_SOURCES =	bwct/thread.cc \
			bwct/tool.cc \
			bwct/fdhelper.cc \
			bwct/tape.cc \
			bwct/changer.cc \
			bwct/bsd.cc \
			bwct/ssl.cc \
			bwct/xdr.cc \
			bwct/network.cc \
			bwct/compress.cc \
			bwct/database.cc



